style: navSide에 fixed z-index 지정

--- a/src/containers/NavSide/NavSide.module.scss
+++ b/src/containers/NavSide/NavSide.module.scss
@@ -1,3 +1,5 @@
+@import '@/styles/zIndex.scss';
+
 .sideNav {
   position: fixed;
   top: 0;
@@ -5,10 +7,12 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  width: var(--w-nav-side);
   height: 100%;
+  background: var(--color-f);
   overflow-y: scroll;
   &::-webkit-scrollbar {
     display: none;
   }
-  width: var(--w-nav-side);
+  z-index: $zindex-fixed + 1;
 }
